--- a/index.html
+++ b/index.html
@@ -93,21 +93,24 @@
             <div class="text-center">
 
                 <h1>About Us</h1>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil aspernatur.
+                <div class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure
+                    maxime totam nihil aspernatur.
                 </div>
             </div>
             <div class="row">
                 <div class="col">picture here</div>
                 <div class="col">
                     <h2>Volulkj fsldjfoi fksld o</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, perspiciatis fugit ut animi qui
+                    <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+                        perspiciatis fugit ut animi qui
                         sequi, eum maiores aut tenetur quam eveniet inventore repellendus quae nostrum sit fuga, dicta
                         laborum temporibus.
                     </p>
-                    <p>
+                    <p class="text-body-secondary">
                         ✅<br />✅<br />✅
                     </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, perspiciatis fugit ut animi
+                    <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+                        perspiciatis fugit ut animi
                         qui
                         sequi, eum maiores aut tenetur quam eveniet inventore repellendus quae nostrum sit fuga,
                         dicta
@@ -121,7 +124,8 @@
         <section class="container-fluid">
             <div class="text-center">
                 <h1>Services</h1>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil aspernatur.
+                <div class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure
+                    maxime totam nihil aspernatur.
                 </div>
             </div>
             <div class="row">
@@ -132,7 +136,8 @@
                         </div>
                         <div class="col-11">
                             <h5>Est labore ad</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
+                            <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
+                                iure maxime totam nihil
                                 aspernatur.</p>
                         </div>
                     </div>
@@ -143,7 +148,8 @@
                         </div>
                         <div class="col-11">
                             <h5>Harum esse qui</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
+                            <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
+                                iure maxime totam nihil
                                 aspernatur.</p>
                         </div>
                     </div>
@@ -154,7 +160,8 @@
                         </div>
                         <div class="col-11">
                             <h5>Aut occaecati</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
+                            <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
+                                iure maxime totam nihil
                                 aspernatur.</p>
                         </div>
                     </div>
@@ -165,7 +172,8 @@
                         </div>
                         <div class="col-11">
                             <h5>Beatae veritatis</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
+                            <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
+                                iure maxime totam nihil
                                 aspernatur.</p>
                         </div>
                     </div>
@@ -215,12 +223,12 @@
         </section>
 
         <!-- SECTION Ipsum -->
-        <section class="container-fluid">
+        <section class="container-fluid beige-bg">
             <div class="row">
-                <div class="col">
+                <div class="col-7 p-5">
                     <div class="row">
                         <h1>Eum ipsam laborum deleniti velit pariatur architecto aut nihil</h1>
-                        <p>
+                        <p class="text-body-secondary">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
                             aspernatur.
                         </p>
@@ -278,7 +286,7 @@
 
                 </div>
 
-                <div class="col">
+                <div class="col-5">
                     VIDEO HERE
                 </div>
             </div>
@@ -299,8 +307,12 @@
 
                     <div class="col">
                         <div class="carousel-inner">
-                            <div class="row text-center">
+                            <h1 class="row text-center">
                                 <i class="mdi mdi-format-quote-close text-success-emphasis"></i>
+                            </h1>
+                            <div class="text-center text-white">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure maxime totam nihil
+                                    aspernatur.</p>
                             </div>
                             <div class="carousel-item active" data-bs-interval="10000">
                                 <div class="row justify-content-center p-5">
@@ -346,36 +358,169 @@
         </section>
 
         <!-- SECTION Pricing -->
-        <section class="container-fluid">
-            <div class="row">
+        <section class="container-fluid beige-bg pt-5">
+            <div class="row text-center">
                 <h1>Pricing</h1>
-                <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
+                <p class="text-body-secondary">Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum
+                    quidem</p>
             </div>
-            <div class="row">
-                <div class="col">Free</div>
-                <div class="col">Business</div>
-                <div class="col">Developer</div>
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-3 m-3">
+                    <div class="card text-center mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Free</h5>
+                            <p class="card-text fs-1 fw-bold">$0<span
+                                    class="text-body-secondary fw-normal fs-5">/month</span></p>
+                            <p class="card-text">Aida dere</p>
+                            <p class="card-text">Nec feugiat nisl</p>
+                            <p class="card-text">Nulla at volutpat dola</p>
+                            <p class="card-text text-body-secondary text-decoration-line-through">Pharetra massa</p>
+                            <p class="card-text text-body-secondary text-decoration-line-through">Massa ultricies mi</p>
+                            <a href="#" class="btn btn-outline-success p-2 m-2">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 m-3">
+                    <div class="card text-center mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Business</h5>
+                            <p class="card-text fs-1 fw-bold">$19<span
+                                    class="text-body-secondary fw-normal fs-5">/month</span></p>
+                            <p class="card-text">Aida dere</p>
+                            <p class="card-text">Nec feugiat nisl</p>
+                            <p class="card-text">Nulla at volutpat dola</p>
+                            <p class="card-text">Pharetra massa</p>
+                            <p class="card-text text-body-secondary text-decoration-line-through">Massa ultricies mi</p>
+                            <a href="#" class="btn btn-outline-success p-2 m-2">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 m-3">
+                    <div class="card text-center mb-3" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Developer</h5>
+                            <p class="card-text fs-1 fw-bold">$29<span
+                                    class="text-body-secondary fw-normal fs-5">/month</span></p>
+                            <p class="card-text">Aida dere</p>
+                            <p class="card-text">Nec feugiat nisl</p>
+                            <p class="card-text">Nulla at volutpat dola</p>
+                            <p class="card-text">Pharetra massa</p>
+                            <p class="card-text">Massa ultricies mi</p>
+                            <a href="#" class="btn btn-outline-success p-2 m-2">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- SECTION Contact -->
-        <section class="container-fluid">
-            <div class="row">
+        <section class="container-fluid beige-bg p-5">
+            <div class="row text-center">
                 <h1>CONTACT</h1>
-                <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
+                <p class="text-body-secondary">Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum
+                    quidem</p>
             </div>
 
-            <div class="row">
-                <div class="col">
-                    <div class="row">Location</div>
-                    <div class="row">Email</div>
-                    <div class="row">Call</div>
+            <div class="row justify-content-evenly">
+                <div class="col-4 bg-white p-3 align-items-evenly">
+                    <div class="row">
+                        <div class="col-1"><i class="mdi mdi-map-marker text-success"></i></div>
+                        <div class="col-11">
+                            <h5>Location:</h5>
+                            <div>A108 Adam Street,</div>
+                            <div>New York, NY 535022</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                            <i class="mdi mdi-email text-success"></i>
+                        </div>
+                        <div class="col-11">
+                            <h5>Email:</h5>
+                            <div>info@example.com</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"><i class="mdi mdi-cellphone text-success"></i></div>
+                        <div class="col-11">
+                            <h5>Call:</h5>
+                            <div>+1 5589 55488 55S</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">Form</div>
+                <div class="col-7 bg-white p-3">
+                    <div class="row">
+                        <div class="col mb-3 px-3">
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Your Name">
+                        </div>
+                        <div class="col mb-3 px-3">
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Your Email">
+                        </div>
+                    </div>
+
+                    <div class="row mb-3 px-3">
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
+                    </div>
+
+                    <div class="row mb-3 px-3">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                            placeholder="Message"></textarea>
+                    </div>
+                    <div class="row px-5">
+                        <a href="#" class="btn btn-success  m-2">Send Message</a>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <footer></footer>
+        <footer class="container-fluid bg-dark text-light py-5">
+            <div class="d-flex justify-content-evenly text-center width100">
+                <div>
+                    <h1>🦄</h1>
+                    <h2>Knight</h2>
+                    <p class="fst-italic">Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga
+                        maxime saepe cmmodi
+                        placeat.</p>
+
+                    <form class="p-0 px-md-5">
+                        <div class="mb-3">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control rounded-pill" placeholder="example@gmail.com"
+                                    aria-label="Recipient's username" aria-describedby="button-addon2" required>
+                                <button class="btn btn-success rounded-pill" type="submit"
+                                    id="button-addon2">Subscribe</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <div class="">
+                        <div class="bg-success dot">
+                            <i class="mdi mdi-twitter "></i>
+                        </div>
+                        <div class="dot bg-success">
+
+                            <i class="mdi mdi-facebook"></i>
+                        </div>
+                        <div class="dot bg-success">
+                            <i class="mdi mdi-instagram"></i>
+
+                        </div>
+                        <div class="dot bg-success">
+                            <i class="mdi mdi-skype"></i>
+
+                        </div>
+                        <div class="dot bg-success">
+                            <i class="mdi mdi-linkedin"></i>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
     </main>
 
 </body>
