Finished Site addtions and added mobile adjustment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="p-5 bg-dark d-flex text-center">
             <div class="container-fluid py-5 text-light">
                 <div class="fs-1">
-                    🦄
+                    <i class="mdi mdi-horse-variant-fast"></i>
                 </div>
                 <h1 class="display-5 fw-bold">Welcome To Knight Studios</h1>
                 <p class="col-md-8 p-3 fs-5 m-auto">
@@ -33,13 +33,11 @@
     </header>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid">
-        <div class="row d-flex justify-content-between">
-            <div class="col">
-                <p>
-                    🦄
-                </p>
+        <div class="row justify-content-between">
+            <div class="col-6">
+                <i class="mdi mdi-horse-variant-fast fs-3"></i>
             </div>
-            <div class="col ">
+            <div class="col-6">
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -89,7 +87,7 @@
 
     <main>
         <!-- SECTION About Us -->
-        <section class="container-fluid">
+        <section class="container-fluid p-5">
             <div class="text-center">
 
                 <h1>About Us</h1>
@@ -97,19 +95,34 @@
                     maxime totam nihil aspernatur.
                 </div>
             </div>
-            <div class="row">
-                <div class="col">picture here</div>
-                <div class="col">
+            <div class="row pt-5">
+                <div class="col-12 col-md order-1">
+                    <img class="image-format" src="assets/board-meeting.jpg" alt="board-meeting">
+                </div>
+                <div class="col-12 col-md order-2 pt-3 pt-md">
                     <h2>Volulkj fsldjfoi fksld o</h2>
-                    <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+                    <p class="text-body-secondary fst-italic">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nihil,
                         perspiciatis fugit ut animi qui
                         sequi, eum maiores aut tenetur quam eveniet inventore repellendus quae nostrum sit fuga, dicta
                         laborum temporibus.
                     </p>
                     <p class="text-body-secondary">
-                        ✅<br />✅<br />✅
+                        <i class="mdi mdi-check-all text-success"></i> Ullamco laboris nisi ut aliquip ex ea commodo
+                        cosequat
                     </p>
-                    <p class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+                    <p class="text-body-secondary">
+                        <i class="mdi mdi-check-all text-success"></i> Duis aute irure dolor in reprehenderit in
+                        voluptate
+                        velit.
+                    </p>
+                    <p class="text-body-secondary">
+                        <i class="mdi mdi-check-all text-success"></i> Ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro
+                        dolore
+                        eu fugiat nulla pariartur.
+                    </p>
+                    <p class="text-body-secondary pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
                         perspiciatis fugit ut animi
                         qui
                         sequi, eum maiores aut tenetur quam eveniet inventore repellendus quae nostrum sit fuga,
@@ -121,18 +134,18 @@
         </section>
 
         <!-- SECTION Services -->
-        <section class="container-fluid">
+        <section class="container-fluid pt-5">
             <div class="text-center">
                 <h1>Services</h1>
                 <div class="text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, iure
                     maxime totam nihil aspernatur.
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row p-5">
+                <div class="col-12 col-md order-2 order-md-1 pt-3 pt-md">
                     <div class="row">
                         <div class="col-1">
-                            <span>📰</span>
+                            <h1><i class="mdi mdi-newspaper-variant-multiple-outline text-success"></i></h1>
                         </div>
                         <div class="col-11">
                             <h5>Est labore ad</h5>
@@ -144,7 +157,7 @@
 
                     <div class="row">
                         <div class="col-1">
-                            <span>🔳</span>
+                            <h1><i class="mdi mdi-cube text-success"></i></h1>
                         </div>
                         <div class="col-11">
                             <h5>Harum esse qui</h5>
@@ -156,7 +169,7 @@
 
                     <div class="row">
                         <div class="col-1">
-                            <span>🖼</span>
+                            <h1><i class="mdi mdi-image-multiple text-success"></i></h1>
                         </div>
                         <div class="col-11">
                             <h5>Aut occaecati</h5>
@@ -168,7 +181,7 @@
 
                     <div class="row">
                         <div class="col-1">
-                            <span>🛡</span>
+                            <h1><i class="mdi mdi-shield-outline text-success"></i></h1>
                         </div>
                         <div class="col-11">
                             <h5>Beatae veritatis</h5>
@@ -179,14 +192,18 @@
                     </div>
                 </div>
 
-                <div class="col">PICTURE here</div>
+                <div class="col-12 col-md order-1 order-md-2">
+                    <img class="image-format" src="assets/typing.jpg" alt="typing">
+                </div>
             </div>
 
-            <div class="row">
+            <div class="row p-5">
 
-                <div class="col">PICTURE here</div>
+                <div class="col-12 col-md">
+                    <img class="image-format" src="assets/investing.jpg" alt="investing">
+                </div>
 
-                <div class="col">
+                <div class="col-12 col-md pt-3 pt-md">
                     <div class="row">
                         <div class="col">
                             <h5>Est labore ad</h5>
@@ -223,9 +240,9 @@
         </section>
 
         <!-- SECTION Ipsum -->
-        <section class="container-fluid beige-bg">
+        <section class="container-fluid beige-bg pt-5">
             <div class="row">
-                <div class="col-7 p-5">
+                <div class="col-12 col-md-7 p-5 order-2 order-md-1">
                     <div class="row">
                         <h1>Eum ipsam laborum deleniti velit pariatur architecto aut nihil</h1>
                         <p class="text-body-secondary">
@@ -286,8 +303,11 @@
 
                 </div>
 
-                <div class="col-5">
-                    VIDEO HERE
+                <div class="col-12 col-md-5 order-1 order-md-2">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0u96jr_HuLg?si=cauh2kra_zshqu1q"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </section>
@@ -343,7 +363,7 @@
 
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -353,7 +373,7 @@
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
-                </button>
+                </button> -->
             </div>
         </section>
 
@@ -366,7 +386,7 @@
             </div>
 
             <div class="row d-flex justify-content-center">
-                <div class="col-3 m-3">
+                <div class="col-8 col-lg-3 m-3">
                     <div class="card text-center mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Free</h5>
@@ -381,7 +401,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 m-3">
+                <div class="col-8 col-lg-3 m-3">
                     <div class="card text-center mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Business</h5>
@@ -396,7 +416,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 m-3">
+                <div class="col-8 col-lg-3 m-3">
                     <div class="card text-center mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Developer</h5>
@@ -423,7 +443,7 @@
             </div>
 
             <div class="row justify-content-evenly">
-                <div class="col-4 bg-white p-3 align-items-evenly">
+                <div class="col-12 col-md-4 bg-white p-3 align-items-evenly order-2 order-md-1">
                     <div class="row">
                         <div class="col-1"><i class="mdi mdi-map-marker text-success"></i></div>
                         <div class="col-11">
@@ -449,7 +469,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-7 bg-white p-3">
+                <div class="col-12 col-md-7 bg-white p-3 order-1 order-md-2">
                     <div class="row">
                         <div class="col mb-3 px-3">
                             <input type="email" class="form-control" id="exampleFormControlInput1"
@@ -479,7 +499,7 @@
         <footer class="container-fluid bg-dark text-light py-5">
             <div class="d-flex justify-content-evenly text-center width100">
                 <div>
-                    <h1>🦄</h1>
+                    <h1><i class="mdi mdi-horse-variant-fast"></i></h1>
                     <h2>Knight</h2>
                     <p class="fst-italic">Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga
                         maxime saepe cmmodi
@@ -490,7 +510,7 @@
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control rounded-pill" placeholder="example@gmail.com"
                                     aria-label="Recipient's username" aria-describedby="button-addon2" required>
-                                <button class="btn btn-success rounded-pill" type="submit"
+                                <button class="btn btn-success rounded-pill special-pill" type="submit"
                                     id="button-addon2">Subscribe</button>
                             </div>
                         </div>
